# supply-guardian

./: .gitignore  DEPLOYMENT.md  deploy.sh  verify_backend_data.py  verify_db.py
agentic_ui/: Dockerfile  index.html  nginx.conf.template  package-lock.json  package.json  vite.config.ts
agentic_ui/src/: App.tsx
agentic_ui/src/api/: adk.ts  backend.ts
agentic_ui/src/components/chat/: ChatPane.tsx
agentic_ui/src/components/layout/: AgentLayout.tsx
agentic_ui/src/hooks/: useSupplyAgent.ts
agentic_ui/src/lib/: types.ts
agents/: .dockerignore  Dockerfile  Makefile  README.md  __init__.py  api_usage_example.md  pyproject.toml
agents/supply_agent/: agent.py  schema.py  tools.py
agents/supply_agent/sub_agents/: __init__.py  consult_execute.py  investigative.py  snapshot.py  strategize.py
backend_supply_api/: .dockerignore  Dockerfile  database.db  pyproject.toml  test_scenarios.py  verify.py  verify_db.py
backend_supply_api/app/: database.py  main.py  models.py
backend_supply_api/app/routes/: actions.py  network.py  shipments.py
backend_supply_api/data/: disruptions.json  nodes.json  products.json  shipments.json
docs/: AGENTIC_UI_PLAN.md  AGENTS.txt  API.md  FRONTEND.md  GAME_PLAY.md  HACKATHON_GUIDE.html  HACKATHON_GUIDE.md  PROMPT_GENERATE_DATA.md  PROMPT_REGENERATE_BACKEND.md  SCENARIOS_PRD.md  SUPPLY_CRISIS_AGENT.md  api_integration_guide.md
frontend_supply_api/: Dockerfile  index.html  nginx.conf.template  package-lock.json  package.json  vite.config.ts
frontend_supply_api/src/: App.tsx  api.ts  index.css  types.ts
(+4 files in other folders)
